--- a/portfolio-2/package.json
+++ b/portfolio-2/package.json
@@ -21,6 +21,7 @@
     "react-native": "https://github.com/expo/react-native/archive/sdk-41.0.0.tar.gz",
     "react-native-calendars": "^1.1259.0",
     "react-native-elements": "^3.4.1",
+    "react-native-events-calendar": "^1.0.8",
     "react-native-gesture-handler": "~1.10.2",
     "react-native-modal": "^11.10.0",
     "react-native-overlay": "^0.5.0",
