--- a/portfolio-2/package.json
+++ b/portfolio-2/package.json
@@ -11,7 +11,6 @@
     "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/bottom-tabs": "^5.11.10",
     "@react-navigation/native": "^5.9.4",
-    "@react-navigation/stack": "^5.14.4",
     "expo": "~41.0.1",
     "expo-status-bar": "~1.0.4",
     "modal-react-native-web": "^0.2.0",
@@ -21,13 +20,13 @@
     "react-native": "https://github.com/expo/react-native/archive/sdk-41.0.0.tar.gz",
     "react-native-calendars": "^1.1259.0",
     "react-native-elements": "^3.4.1",
-    "react-native-events-calendar": "^1.0.8",
     "react-native-gesture-handler": "~1.10.2",
     "react-native-modal": "^11.10.0",
     "react-native-overlay": "^0.5.0",
     "react-native-reanimated": "~2.1.0",
     "react-native-safe-area-context": "^3.2.0",
     "react-native-screens": "~3.0.0",
+    "react-native-stopwatch-timer": "0.0.21",
     "react-native-web": "~0.13.12"
   },
   "devDependencies": {
