--- a/portfolio-2/package.json
+++ b/portfolio-2/package.json
@@ -1,6 +1,11 @@
 {
+  "name": "portfolio-2",
   "main": "node_modules/expo/AppEntry.js",
+  "homepage": "https://Shryuushi.github.io/30-Day-Challenge",
+  "private": true,
   "scripts": {
+    "predeploy": "expo build:web",
+    "deploy": "gh-pages -d web-build",
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
@@ -11,6 +16,7 @@
     "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/bottom-tabs": "^5.11.10",
     "@react-navigation/native": "^5.9.4",
+    "@react-navigation/stack": "^5.14.4",
     "expo": "~41.0.1",
     "expo-status-bar": "~1.0.4",
     "modal-react-native-web": "^0.2.0",
@@ -30,7 +36,7 @@
     "react-native-web": "~0.13.12"
   },
   "devDependencies": {
-    "@babel/core": "^7.9.0"
-  },
-  "private": true
+    "@babel/core": "^7.9.0",
+    "gh-pages": "^3.1.0"
+  }
 }
